[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sawmill_api"
version = "2025.05.20"
description = "Your project description here"
authors = [{ name = "Nicholas Willhite"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask==3.1.1",
    "pydantic==2.11.4"
]

[tool.ruff]
exclude = [
  "sawmill_api/lib/smsh/SMSHLexer.py",
  "sawmill_api/lib/smsh/SMSHParser.py",
]
